--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "recharts": "^3.5.1",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.8.2",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "bcryptjs": "2.4.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
