feat: Initialize Electron app structure and dependencies
This commit sets up the foundational structure for an Electron application, including updating `package.json` with necessary dependencies for building and running an Electron app. It also introduces basic configurations for the Electron build process and updates `index.html` to remove inline styles, preparing for external CSS management.

Key changes include:
- Adding Electron, Electron Builder, concurrently, wait-on, and cross-env to dev dependencies.
- Updating script commands for Electron development and building.
- Defining Electron build configuration in `package.json`.
- Adjusting `index.html` for better styling management.
- Modifying `types.ts` and `constants.ts` to align with username-based authentication and remove specific mock data for products, clients, orders, and payments, preparing for API-driven data.
- Updating `store.tsx` for username-based login and registration.

--- a/package.json
+++ b/package.json
@@ -1,28 +1,81 @@
+
 {
-  "name": "imani-system",
-  "private": true,
-  "version": "0.0.0",
+  "name": "imani-shop-system",
+  "productName": "Imani Shop Management",
+  "version": "1.0.0",
+  "description": "Offline Shop Management System",
+  "main": "electron/main.js",
   "type": "module",
+  "author": "Imani Systems",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "npm run build && electron-builder",
+    "postinstall": "cd backend && npm install"
   },
   "dependencies": {
-    "lucide-react": "^0.561.0",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.33.0",
-    "react": "^19.2.3",
-    "recharts": "^3.5.1",
-    "jspdf": "2.5.1",
-    "jspdf-autotable": "3.8.2",
-    "xlsx": "0.18.5",
-    "bcryptjs": "2.4.3"
+    "@google/genai": "*",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.7",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0",
+    "cross-env": "^7.0.3"
+  },
+  "build": {
+    "appId": "com.imani.shop",
+    "productName": "Imani Shop Manager",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "resources/mongodb",
+        "to": "mongodb"
+      },
+      {
+        "from": "backend",
+        "to": "backend",
+        "filter": [
+          "**/*",
+          "!node_modules/.bin/*"
+        ]
+      }
+    ],
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "runAfterFinish": true
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "public/favicon.ico"
+    }
   }
 }
