feat: Update dependencies and application structure
- Update key dependencies like @google/genai and lucide-react to their latest versions.
- Refactor index.html to use ESM imports via esm.sh for improved module loading.
- Introduce the Expense interface and integrate expense tracking into the AppState and store.
- Refactor the Gemini service to ensure proper initialization and use of the API key.
- Update the Sidebar component to include a dashboard icon.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -16,5 +17,22 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  "include": [
+    "./index.tsx",
+    "./App.tsx",
+    "./store.tsx",
+    "./types.ts",
+    "./constants.ts",
+    "./components/**/*.ts",
+    "./components/**/*.tsx",
+    "./pages/**/*.ts",
+    "./pages/**/*.tsx",
+    "./services/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "backend",
+    "dist-electron"
+  ]
 }
