--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "postinstall": "cd backend && npm install"
   },
   "dependencies": {
-    "@google/genai": "*",
-    "lucide-react": "^0.263.1",
+    "@google/genai": "^1.34.0",
+    "lucide-react": "^0.454.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.7",
